# Practica_Geant_4

./: CMakeLists.txt  README.md  ourmain.cc  ourmain_old.cc  vis.mac
experiment/: g4Macro_Meroli_100MeV_electron_5p6um_Si.mac
include/: YourActionInitialization.hh  YourAnalysis.hh  YourDetectorConstruction.hh  YourDetectorMessenger.hh  YourEventAction.hh  YourPrimaryGeneratorAction.hh  YourRunAction.hh  YourSteppingAction.hh
roottodata/: README_AUTHOR.md  convert_to_data.py
src/: YourActionInitialization.cc  YourDetectorConstruction.cc  YourDetectorMessenger.cc  YourEventAction.cc  YourPrimaryGeneratorAction.cc  YourRunAction.cc  YourSteppingAction.cc
